2011-05-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSTableHeaderView.m: Use resize cursors

2011-05-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSTextView.m: Use IBeam cursor if selectable

2011-05-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSSplitView.m: Use resize cursors

2011-05-14 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPrintOperation.m: Add an extra context save and restore
	at the sheet level. This is a partial fix for bug #32845.

2011-05-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSXibLoader.m: Add support for the "array" and
	"dictionary" elements found in newer XIB files (Version >= 8).

2011-05-11  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/Functions.m: For functions which set the fill or stroke
	color as part of their implementation, save/restore the graphics
	state so that the user's fill/stroke color isn't overwritten.
	See the PixelExactDrawing test in GSTest for an example.

2011-05-07  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSButtonCell.m (-drawImage:withFrame:inView:): Align
	the point at which the image is drawn to the nearest pixel.

	r32895 which reimplemented -[NSImage composite..] methods
	on top of -[NSImage draw...] methods means that drawing
	images with -compositeToPoint: no longer pixel-aligns
	the image automatically. The new behaviour matches
	Cocoa, however.

011-05-07  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSView.m (-convertPoint:toView:): Correct this
	method; it was applying the transforms backwards :-(

2011-05-05  Eric Wasylishen  <ewasylishen@gmail.com>

	* Tests/gui/NSView/NSView_frame_bounds.m: Add some more tests
	of setBoundsSize:. They are currently failing (but pass on
	OS X).

2011-05-04  Eric Wasylishen  <ewasylishen@gmail.com>

	* Images: Add a few more high-res images (arrows)

2011-05-03  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSScreen.m: Use -userSpaceScaleFactor to calculate
	NSDeviceResolution